tests/golden/builtin-auth-rewrite/builtin-auth-rewrite/builtin-auth-rewrite/01_keycloak_helmchart/postgresql/templates/primary/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 15.4.0
    helm.sh/chart: postgresql-12.12.10
  name: keycloak-postgresql-ingress
  namespace: syn-builtin-auth-rewrite
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: keycloakx
              app.kubernetes.io/name: keycloakx
      ports:
        - port: 5432
  podSelector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/name: postgresql
